refactor(core): 引入 ComplexAttribute 层次结构，统一 Entity/Projection 复合属性
引入 ComplexAttribute 作为 EntityComplexAttribute 和 ProjectionComplexAttribute
的共同父接口，统一复合属性（Embedded + Schema/Join）的类型层次：

- 新增 ComplexAttribute sealed 接口，提供 isEmbeddable/isObject/isPrimitive 默认实现
- EntityAttribute permits 重构：EmbeddedAttribute + EntitySchemaAttribute → EntityComplexAttribute
- ProjectionAttribute permits 重构：ProjectionJoinAttribute + ProjectionSchemaAttribute → ProjectionComplexAttribute
- EmbeddedAttribute 重命名为 EntityEmbeddedAttribute，新增 ProjectionEmbeddedAttribute
- DefaultProjectionEmbeddedAttribute 实现投影嵌入式属性构造
- ProjectionConstructorBuilder 支持 ProjectionEmbeddedAttribute 分支
- ProjectionAttributeFactory.createAttribute 简化参数，移除冗余 EntityAttribute 参数
- JoinAttribute 移除 isObject/isPrimitive（由 ComplexAttribute 统一提供）
- 测试用例同步更新类型引用